# plotynium

./: .gitignore  404.html  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  requirements.txt  sitemap.xml
.github/workflows/: ci.yml  docs.yml
api/: index.html
api/context/: index.html
api/interpolations/: index.html
api/options/: index.html
api/plot/: index.html
api/properties/: index.html
api/schemes/: index.html
api/types/: index.html
colorschemes/interpolations/: index.html
colorschemes/schemes/: index.html
docs/: export.md  index.md  introduction.md
docs/api/: context.md  index.md  interpolations.md  marks.md  options.md  plot.md  properties.md  schemes.md  types.md
docs/colorschemes/: interpolations.md  schemes.md
docs/guide/: browser.md  dimensions.md  export-cairosvg.md  export-latex.md  export-typst.md  export.md  jupyter.md  legend.md  marks.md  options.md
docs/marks/: area.md  axis.md  bar.md  dot.md  (+3 more)
examples/: area.py  axis.py  bar.py  diverging.py  dot.py  latex.py  legend.py  line.py  manifold.py  pca.py  pi_prob.py
export/: index.html
introduction/: index.html
plotynium/: __init__.py  colors.py  context.py  dimensions.py  domain.py  dot.py  getter.py  interpolations.py  label.py  options.py  plot.py  properties.py  scaler.py  schemes.py  symbols.py  types.py
search/: search_index.json
tests/: default_context.py  test_colors.py  test_dimensions.py  test_domain.py  test_interpolations.py  test_label.py  test_options.py  test_plot.py  test_properties.py  test_scaler.py  test_schemes.py  test_symbols.py
(+106 files in other folders)
