[project]
name = "plotaclysm"
version = "0.1.0"
readme = "README.md"
authors = [
  { name = "Benjamin BOURBON", email = "ben.bourbon06@gmail.com"},
]
requires-python = ">=3.9"
dependencies = ["detroit"]
license = {"text" = "MIT"}

[project.urls]
Homepage="https://github.com/bourbonut/plotaclysm"
Repository="https://github.com/bourbonut/plotaclysm"
