[project]
name = "plotynium"
version = "0.1.0"
readme = "README.md"
authors = [
  { name = "Benjamin BOURBON", email = "ben.bourbon06@gmail.com"},
]
requires-python = ">=3.9"
dependencies = ["detroit==2.2.0"]
license = {"text" = "MIT"}

[project.urls]
Homepage="https://github.com/bourbonut/plotaclysm"
Repository="https://github.com/bourbonut/plotaclysm"
